--- a/data/countries/de/sh/segeberg/data.yaml
+++ b/data/countries/de/sh/segeberg/data.yaml
@@ -6,7 +6,7 @@ state: Schleswig-Holstein
 district: Segeberg
 urls:
   - type: WEBSITE
-    url: https://gruene-se-kv.de/
+    url: https://gruene-se-kv.de/home/
   - type: FACEBOOK
     url: https://www.facebook.com/grn.kv.segeberg
   - type: INSTAGRAM
@@ -22,7 +22,7 @@ state: Schleswig-Holstein
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: https://gruene-bad-bramstedt.de/
+    url: https://gruene-bad-bramstedt.de/aktuelles/
   - type: FACEBOOK
     url: https://www.facebook.com/B%C3%BCndnis-90-Die-Gr%C3%BCnen-OV-Bad-Bramstedt-339062962869756/
 ---
@@ -34,7 +34,7 @@ state: Schleswig-Holstein
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: https://gruene-norderstedt.de/
+    url: https://gruene-norderstedt.de/aktuelles/
 ---
 city: Alveslohe
 country: DE
@@ -44,7 +44,7 @@ state: Schleswig-Holstein
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: https://www.gruene-alveslohe.de/
+    url: https://www.gruene-alveslohe.de/home/
 ---
 city: Trave-Land
 country: DE
