--- a/data/countries/de/sh/steinburg/data.yaml
+++ b/data/countries/de/sh/steinburg/data.yaml
@@ -6,7 +6,7 @@ state: Schleswig-Holstein
 district: Steinburg
 urls:
   - type: WEBSITE
-    url: http://www.gruene-steinburg.de/
+    url: https://www.gruene-steinburg.de/home-aktuelles/
   - type: FACEBOOK
     url: https://www.facebook.com/kvsteinburg/
 emails:
