--- a/data/countries/de/rp/bad-kreuznach/data.yaml
+++ b/data/countries/de/rp/bad-kreuznach/data.yaml
@@ -20,4 +20,4 @@ district: Bad Kreuznach
 city: Bad Kreuznach
 urls:
   - type: WEBSITE
-    url: https://www.gruene-bad-kreuznach.de/
+    url: https://www.gruene-bad-kreuznach.de/home/
